--- a/MODULE 2 ASSIGNMENT/save.html
+++ b/MODULE 2 ASSIGNMENT/save.html
@@ -1,8 +1,26 @@
-<!doctype>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-	<h1> 
-		Fried
-	</h1>
+	<meta charset="utf-8">
+	<title>David Chu's China Bistro</title>
+	<style>
+	body{
+		background-color: maroon;
+		text-color: black;
+		font-size: 15px;
+	}
+		
+	</style>
 	</head>
+	<body>
+		<header>
+			<nav id="header-nav" class="navbar navbar-default">
+				<div class="container">
+					
+				</div>
+				
+			</nav>
+		</header>
+		
+	</body>
 </html>
