--- a/MODULE 2 ASSIGNMENT/Rest.html
+++ b/MODULE 2 ASSIGNMENT/Rest.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>David Chu's China Bistro</title>
 	<link rel="stlyesheet" href="css/bootstap.min.css">
-	<link rel="stlyesheet" href="css/stlyes.css">
+	<link rel="stlyesheet" href="css/stlyes css .html">
 	<link href='https://fonts.googleapis.com/
 	css?family=Oxygen:400,300:700' rel='stlyesheet' type='text/css'>
 	<style>
